; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_fd-util.c_fd_move_above_stdio.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_fd-util.c_fd_move_above_stdio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROTECT_ERRNO = common dso_local global i32 0, align 4
@F_GETFD = common dso_local global i32 0, align 4
@FD_CLOEXEC = common dso_local global i32 0, align 4
@F_DUPFD_CLOEXEC = common dso_local global i32 0, align 4
@F_DUPFD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fd_move_above_stdio(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* @PROTECT_ERRNO, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = icmp sgt i32 %10, 2
  br i1 %11, label %12, label %14

12:                                               ; preds = %9, %1
  %13 = load i32, i32* %3, align 4
  store i32 %13, i32* %2, align 4
  br label %48

14:                                               ; preds = %9
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @F_GETFD, align 4
  %17 = call i32 @fcntl(i32 %15, i32 %16, i32 0)
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %14
  %21 = load i32, i32* %3, align 4
  store i32 %21, i32* %2, align 4
  br label %48

22:                                               ; preds = %14
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* @FD_CLOEXEC, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %22
  %28 = load i32, i32* %3, align 4
  %29 = load i32, i32* @F_DUPFD_CLOEXEC, align 4
  %30 = call i32 @fcntl(i32 %28, i32 %29, i32 3)
  store i32 %30, i32* %5, align 4
  br label %35

31:                                               ; preds = %22
  %32 = load i32, i32* %3, align 4
  %33 = load i32, i32* @F_DUPFD, align 4
  %34 = call i32 @fcntl(i32 %32, i32 %33, i32 3)
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %31, %27
  %36 = load i32, i32* %5, align 4
  %37 = icmp slt i32 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %35
  %39 = load i32, i32* %3, align 4
  store i32 %39, i32* %2, align 4
  br label %48

40:                                               ; preds = %35
  %41 = load i32, i32* %5, align 4
  %42 = icmp sgt i32 %41, 2
  %43 = zext i1 %42 to i32
  %44 = call i32 @assert(i32 %43)
  %45 = load i32, i32* %3, align 4
  %46 = call i32 @close(i32 %45)
  %47 = load i32, i32* %5, align 4
  store i32 %47, i32* %2, align 4
  br label %48

48:                                               ; preds = %40, %38, %20, %12
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i32 @fcntl(i32, i32, i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
